--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,3 +29,9 @@ button:focus,
 button:focus-visible {
   outline: none;
 }
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
